# synth

./: Cargo.toml  README.md
crates/synth-egui/: Cargo.toml
crates/synth-egui/src/: app.rs
crates/synth-structs/: Cargo.toml
crates/synth-structs/src/: input.rs  lib.rs  player.rs  source.rs  traits.rs
crates/synth-structs/src/mods/: damp_lin.rs  damp_quad.rs  mod.rs
crates/synth-structs/src/ocils/: closure.rs  mod.rs  noise.rs  saw.rs  sine.rs  square.rs  table.rs
crates/synth-structs/src/ops/: add.rs  amp.rs
crates/synth-structs/src/util/: dbg.rs  mod.rs
crates/synth-ui/: Cargo.toml
crates/synth-ui/src/: app.rs  graph.rs  lib.rs
crates/synth_structs/: Cargo.toml
crates/synth_structs/src/: input.rs  lib.rs  source.rs
crates/synth_structs/src/ocils/: closure.rs  saw.rs  square.rs  table.rs
crates/synth_structs/src/ops/: amp.rs  mod.rs
crates/synth_structs/src/util/: dbg.rs
examples/: add.rs  closure.rs  input.rs  mix.rs  mix_op.rs  noise.rs  oscillator.rs  robot.rs  saw.rs  sine.rs  square.rs  table.rs  ui.rs
src/: input.rs  lib.rs  player.rs  source.rs
src/modifiers/: amp.rs  mix.rs  mod.rs
src/ocils/: closure.rs  mod.rs  noise.rs  oscillator.rs  saw.rs  sine.rs  square.rs  table.rs
src/ops/: add.rs  amp.rs  mix.rs  mod.rs
src/synths/: closure.rs  mod.rs  oscillator.rs  table.rs
src/util/: dbg.rs
