[package]
name = "synth"
version = "0.1.0"
edition = "2021"
authors = ["Cas Brugman <casbrugman@hotmail.nl>"]

[workspace]
members = ["crates/*"]

[workspace.dependencies]
synth-structs = {path = "crates/synth-structs"}

[dependencies]
synth-structs = { workspace = true}

[dev-dependencies]
rand = "0.8.5"
